[package]
name = "tlist"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache 2.0"
authors = [ "Qqwy / Marten"]
description = "Type-level linked lists (of types) and type-level 'functions' to manipulate them."
categories = ["no-std", "no-std::no-alloc", "data-structures", "traits"]
keywords = ["generic", "tlist", "functional", "list", "no_std"]
readme = "README.md"
repository = "https://github.com/qqwy/rust-tlist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.16.0"

[dev-dependencies]
static_assertions = "1.1.0"
